--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -214,7 +214,7 @@ body {
     &--6-2 {
       left: 174 / 1121 * 100%;
       right: 131 / 1121 * 100%;
-      top: -2%;
+      top: 2%;
       padding-bottom: 262 / 1121 * 80%;
     }
     &--6-3 {
@@ -275,6 +275,10 @@ body {
 
   @include breakpoint("lg") {
     font-size: $base * 5;
+  }
+
+  @include breakpoint("lg-height") {
+    font-size: $base * 3.5;
   }
 
   &--display {
